--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
               <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
           
               <!-- Initialize Swiper -->
-              <script>
+              <script type="text/javascript">
                 var swiper = new Swiper(".mySwiper", {
                   slidesPerView: 6,
                   spaceBetween: 30,
